fixing alignment

--- a/Module-2_Assessment/Assets/css/css.css
+++ b/Module-2_Assessment/Assets/css/css.css
@@ -37,10 +37,10 @@ h1{
 .container1{
     text-align: center;
     margin: auto;
-    
+    margin-top: 10px;    
     width: 33%;
     height: 30%;   
-    margin-top: 100px; 
+    /* margin-top: 100px;  */
 }
 
 #emptyWord{
@@ -60,7 +60,7 @@ img{
     width:100%;    
 }
 .container2{
-    margin-top: 10px;
+    margin-top: 45px;
     float:left;    
     width: 33%;
     height: 50%; 
